--- a/main.tex
+++ b/main.tex
@@ -44,16 +44,15 @@
 
 \begin{abstract}
     Memory one strategies are a set of iterated prisoner’s dilemma strategies
-    that have been praised
-    for their mathematical tractability and robustness. This manuscript explores
-    the \textit{best response} memory one strategies and proves that they can be
-    studied as a multidimensional optimisation promblem. Though extortionate memory
-    one strategies have gained much attetion, we prove that best response memory
-    one strategies do not behave in an extortionate way, and for 
-    memory one strategies to be evolutionary robust they need to be able to behave
-    in a forgiving way. We also provide evidence that memory one strategies do suffer
-    from the limitation of their memory and can be out performed in multi interactions
-    by longer memory strategies.
+    that have been praised for their mathematical tractability and robustness.
+    This manuscript explores \textit{best response} memory one strategies and
+    studies them as a multidimensional optimisation problem. Though extortionate
+    memory one strategies have gained much attention, we prove that best response
+    memory one strategies do not behave in an extortionate way. For memory
+    one strategies to be evolutionary robust they need to be able to behave in a
+    forgiving way. We also provide evidence that memory one strategies suffer
+    from the limitation of their memory and can be out performed in multi agent
+    interactions by longer memory strategies.
 \end{abstract}
 
 \section{Introduction}\label{section:introduction}
