write up to conclusion

--- a/tex/skew_table.tex
+++ b/tex/skew_table.tex
@@ -1,10 +1,10 @@
-\begin{tabular}{lr}
+\begin{tabular}{lrr}
 \toprule
-{} &  Distance Skewness \\
+{} &  Skewness &   Kurtosis \\
 \midrule
-\$p\_1\$ difference &           0.220546 \\
-\$p\_2\$ difference &          -0.105648 \\
-\$p\_3\$ difference &          -7.001084 \\
-\$p\_4\$ difference &          -1.937356 \\
+Difference in $p_1$ &  0.155659 &   1.845893 \\
+Difference in $p_2$ & -0.124756 &   2.717163 \\
+Difference in $p_3$ & -6.766827 &  79.624372 \\
+Difference in $p_4$ & -1.906567 &   3.759093 \\
 \bottomrule
 \end{tabular}
