--- a/tex/sserror_table.tex
+++ b/tex/sserror_table.tex
@@ -2,14 +2,19 @@
 \toprule
 {} &      SSerror \\
 \midrule
-count &  1023.000000 \\
-mean  &     0.322116 \\
-std   &     0.388394 \\
-min   &     0.000000 \\
-25\%   &     0.076284 \\
-30\%   &     0.102444 \\
-35\%   &     0.128244 \\
-50\%   &     0.167952 \\
-max   &     2.470588 \\
+count  &  1643.000000 \\
+mean   &     0.315173 \\
+std    &     0.376325 \\
+min    &     0.000000 \\
+5\%     &     0.011068 \\
+25\%    &     0.075948 \\
+30\%    &     0.104707 \\
+35\%    &     0.126840 \\
+50\%    &     0.168275 \\
+95\%    &     1.058824 \\
+max    &     2.470588 \\
+median &     0.168275 \\
+skew   &     1.939179 \\
+kurt   &     3.652869 \\
 \bottomrule
 \end{tabular}
