--- a/tex/evo_sserror_table.tex
+++ b/tex/evo_sserror_table.tex
@@ -2,14 +2,19 @@
 \toprule
 {} &  Evo SSerror \\
 \midrule
-count &  1023.000000 \\
-mean  &     0.189929 \\
-std   &     0.219760 \\
-min   &     0.000000 \\
-25\%   &     0.075918 \\
-30\%   &     0.097995 \\
-35\%   &     0.113404 \\
-50\%   &     0.140975 \\
-max   &     1.529412 \\
+count  &  1643.000000 \\
+mean   &     0.183524 \\
+std    &     0.216175 \\
+min    &     0.000000 \\
+5\%     &     0.015543 \\
+25\%    &     0.073650 \\
+30\%    &     0.094743 \\
+35\%    &     0.111698 \\
+50\%    &     0.138574 \\
+95\%    &     0.529412 \\
+max    &     1.529412 \\
+median &     0.138574 \\
+skew   &     3.488164 \\
+kurt   &    13.206905 \\
 \bottomrule
 \end{tabular}
