--- a/nbs/Analysis data.ipynb
+++ b/nbs/Analysis data.ipynb
@@ -36,6 +36,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_sql_data_frame(path):\n",
+    "    engine = sa.create_engine(\"sqlite:///%s\" % path)\n",
+    "    connection = engine.connect()\n",
+    "\n",
+    "    return pd.read_sql(\"experiments\", connection)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
