--- a/main.tex
+++ b/main.tex
@@ -392,11 +392,11 @@ presents the best response memory-one strategy to a group of opponents.
 
     \[
         S_q =
-        \left\{p \in \mathbb{R} ^ 4 \left\|\
+        \left\{p \in \mathbb{R} ^ 4 \left|
             \begin{aligned}
                 \bullet\quad p_j \in \{0, 1\} & \quad \text{and} \quad \frac{d}{dp_k} 
                 \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0
-                \quad \forall \quad j \in J \quad \&  \quad k \in K  \quad \forall \quad J, K \\
+                \quad \text{forall} \quad j \in J \quad \&  \quad k \in K  \quad \text{forall} \quad J, K \\
                 & \quad \text{where} \quad J \cap K = \O \quad
                 \text{and} \quad J \cup K = \{1, 2, 3, 4\}\\
                 \bullet\quad  p \in \{0, 1\} ^ 4
